tests/ui/traits/const-traits/const-drop-bound.stderr
error[E0277]: the trait bound `Foo<E>: ~const Destruct` is not satisfied
  --> $DIR/const-drop-bound.rs:23:5
   |
LL |     foo(res)
   |     ^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
